# apertium-mal-eng

./: Makefile  Makefile.am  apertium-mal-eng.eng-mal.t1x  apertium-mal-eng.eng-mal.t2x  apertium-mal-eng.eng.dix  apertium-mal-eng.mal-eng.dix  apertium-mal-eng.mal-eng.lrx  apertium-mal-eng.mal-eng.t1x  apertium-mal-eng.mal-eng.t2x  apertium-mal-eng.mal-eng.t3x  apertium-mal-eng.mal.dix  apertium-mal-eng.post-eng.dix  apertium-mal-eng.post-mal.dix  configure.ac  mal-eng.mode  mal-eng.translit.dix  modes.xml  ui
backup/: apertium-mal-eng.eng-mal.t2x  apertium-mal-eng.eng-mal.t3x  apertium-mal-eng.mal-eng.t1x
dev/: latin-gen.py  maram.speling
dev/latin/: apertium-mal-eng.mal-eng.dix
texts/: cuento.mal.txt  nelson.mal.sep.txt  nelson.mal.txt  nelson.txt  radium.mal.txt
ui/: Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  translator.pro
